Add workflows for Docker, Dependabot and Dependency graph
To push Docker images to GitHub Container Registry (ghcr.io):
-grant repository write access to GitHub packages

To push Docker images to Docker Hub (docker.io):
-uncomment Docker Hub related lines in build-and-push-docker-images.yml
-configure env.DOCKERHUB_USERNAME and secrets.DOCKERHUB_ACCESSTOKEN